<resources>
    <string name="app_name">iLean</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_label">Автокомпонент-Трейд</string>

    <!-- WorkerMainActivity -->
    <array name="users_type">
        <item>Работник</item>
        <item>Руководитель</item>
    </array>

    <array name="workers">
        <item>Домнин И.И.</item>
        <item>Киреев В. Ю.</item>
        <item>Зарипов А. А.</item>
    </array>

    <!-- Что делать -->
    <array name="whatDo">
        <item>Заглушка 6350-1109 140-10</item>
        <item>Упор 53605-1109 136-10</item>
        <item>Планка 6350-1109 136-10</item>
        <item>Труба 5350-1109 132-25</item>
        <item>Стойка с аморт. 5350-1109130-25</item>
        <item>Накладка 6520-1109142-10</item>
        <item>Косынка 5350-1109139-20</item>
        <item>Заглушка 6350-1109140-10</item>
        <item>Упор 6520-1109134-20</item>
        <item>Планка 6350-1109136-10</item>
        <item>Труба 5350-1109132-20</item>
        <item>Стойка с аморт. 5350-1109110</item>
        <item>Накладка 6520-1109142-10</item>
        <item>Укос 6520-1109142-10</item>
        <item>Упор 6520-1109134-20</item>
        <item>Усилитель 6520-1109144</item>
        <item>Планка 6520-1109 136</item>
        <item>Труба 6520-1109132-30</item>
        <item>Стойка с аморт. 6520-1109110</item>
        <item>Заглушка 6350-1109140-10</item>
        <item>Упор 53605-1109140-10</item>
        <item>Труба 65115-1109132-75</item>
        <item>Стойка 65115-1109130-75</item>
        <item>Кронштейн 65115-3506185</item>
        <item>Кронштейн 65115-3419030</item>
        <item>Кронштейн 53205-8120032</item>
        <item>Кронштейн 54115-1302047-10</item>
        <item>Скоба</item>
        <item>Втулка</item>
        <item>Штамп</item>
    </array>

    <!-- Где делать -->
    <array name="whereDo">
        <item>Рубка</item>
        <item>Рубка полос</item>
        <item>Штамповка</item>
        <item>Нарезка</item>
        <item>Зачистка заусенец</item>
        <item>Сверление отверстий</item>
        <item>Приварка</item>
        <item>Зачистка сварочных швов</item>
        <item>Приварка стержня</item>
        <item>Снятие фаски с отверстий</item>
        <item>Фрезеровка паза</item>
        <item>Вырубка</item>
        <item>Гибка</item>
        <item>Приварка гайки</item>
        <item>Сжатие трубки</item>
        <item>Вставка амортизаторов</item>
        <item>Комплектовка болтами</item>
        <item>Упаковка</item>
        <item>Приварка заглушки</item>
        <item>Приварка упора</item>
        <item>Приварка планки</item>
        <item>Отправка на покраску</item>
        <item>Выставка амортизаторов</item>
        <item>Приварка накладок</item>
        <item>Приварка косынки</item>
        <item>Получение с покраски</item>
        <item>Приварка усилителя</item>
        <item>Отправка на фрезеровку</item>
        <item>Получение с фрезеровки</item>
        <item>Голтовка</item>
        <item>Переналадка</item>

    </array>

    <!-- Готовый продукт -->
    <array name="productsName">
        <item>Стойка с амортизатором 5350-1109130-25</item>
        <item>Стойка с амортизатором 5350-1109110</item>
        <item>Стойка с амортизатором 6520-1109110</item>
        <item>Стойка 65115-1109130-75</item>
        <item>Кронштейн 65115-3506185</item>
        <item>Кронштейн 65115-3419030</item>
        <item>Кронштейн 53205-8120032</item>
        <item>Кронштейн 54115-1302047-10</item>
        <item>Скоба</item>
        <item>Втулка</item>
    </array>

    <!-- NavigationDrawerFragment-->
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <!--Other  -->
    <string name="title_activity_task_list">Мои задания</string>
    <string name="title_activity_master_main">Главное окно мастера</string>
    <string name="title_activity_create_task">Создание задания</string>
    <string name="title_activity_tracking">Отслеживание выполнения</string>
    <string name="title_activity_reports">Отчеты</string>
    <string name="whom">Кому</string>
    <string name="what">Что делать</string>
    <string name="where">Где</string>
    <string name="title_activity_login">ВХОД</string>
    <string name="from">От:</string>
    <string name="how_many">Сколько</string>
    <string name="tv_hint_date">ДД.ММ.ГГ</string>
    <string name="tv_hint_time">ЧЧ:ММ</string>
    <string name="tv_finish">По:</string>
    <string name="btn_send">Отправить</string>
    <string name="error_sending_data_to_Db">Не удалось отправить задание на сервер</string>
    <string name="no_find_worker">Неправильный пароль или логин</string>
    <string name="task_sending_succesful">Задание успешно отправлено на сервер</string>
    <string name="refresh">Обновить</string>
    <string name="task_sending_wrong">Ошибка при отправке задания</string>
    <string name="title_activity_task_begin">TaskBeginActivity</string>
    <string name="title_activity_task_run">TaskRunActivity</string>
    <string name="finish_task">Завершить задание</string>
    <string name="title_activity_task_about">TaskAboutActivity</string>
    <string name="about_tracking">Подробно о выполнении</string>
    <string name="sos">SOS</string>
    <string name="cause_stop">Причина простоя</string>
    <string name="cause_brak">Причина брака</string>
    <string name="no_stop_on_manufactering">Нет приостановок на производстве.</string>
    <string name="without_stop">Без простоя</string>
    <string name="error">Ошибка</string>
    <string name="without_defect">Без брака</string>
    <string name="quality_world_standart">Качество на уровне мировых стандартов.</string>
    <string name="no_cause_brak">Не выбрана причина или не введено количество</string>
    <string name="no_cause_stop">Выберите причину простоя</string>
    <string name="wrong_server_responce">Что-то пошло не так</string>
    <string name="error_connection_wifi">Необходимо возобновить Wi-Fi соединение.</string>
    <string name="error_empty_list">Нет заданий или нет Wi-Fi соединение.</string>
    <string name="cta_hint_plan">План</string>
    <string name="cta_hint_comment">Комментарии</string>
    <string name="new_notification">ONE</string>

    <array name="stop_cause">
        <item>Оборудование</item>
        <item>Инструмент</item>
        <item>Заготовка</item>
        <item>Ремонт</item>
        <item>Транспорт</item>
        <item>Другое</item>
    </array>

    <array name="brak_cause">
        <item>Оборудование</item>
        <item>Инструмент</item>
        <item>Заготовка</item>
        <item>Другое</item>
    </array>
</resources>
