<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
        <!-- Set Toolbar in MainActivity-->
        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"/>
        <!-- -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="20dp">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/whom"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical|left"
                android:textColor="@color/colorTextPrimary"
                android:fontFamily="sans-serif"
                android:textSize="20sp"
                android:layout_marginTop="8dp"/>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:id="@+id/whomSpinner"
                android:layout_marginTop="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/what"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical|left"
                android:textColor="@color/colorTextPrimary"
                android:fontFamily="sans-serif"
                android:textSize="20dp"
                android:layout_marginTop="8dp"/>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:id="@+id/whatSpinner"
                android:layout_marginTop="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/where"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical|left"
                android:textColor="@color/colorTextPrimary"
                android:fontFamily="sans-serif"
                android:textSize="20dp"
                android:layout_marginTop="8dp"/>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:id="@+id/whereSpinner"
                android:layout_marginTop="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/how_many"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical|left"
                android:textColor="@color/colorTextPrimary"
                android:fontFamily="sans-serif"
                android:textSize="20dp"
                android:layout_marginTop="8dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/howManyEt"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/from"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical|left"
                android:textColor="@color/colorTextPrimary"
                android:fontFamily="sans-serif"
                android:textSize="20dp"
                android:layout_marginTop="8dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_input_dateBefore"
                    android:hint="@string/tv_hint_date"
                    android:fontFamily="sans-serif"
                    android:textSize="16sp"
                    android:textColor="@color/colorTextSecondary"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_marginTop="8dp"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/tv_input_timeBefore"
                    android:hint="@string/tv_hint_time"
                    android:fontFamily="sans-serif"
                    android:textSize="16sp"
                    android:textColor="@color/colorTextSecondary"
                    android:gravity="center"
                    android:layout_weight="1" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_finish"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical|left"
                android:textColor="@color/colorTextPrimary"
                android:fontFamily="sans-serif"
                android:textSize="20dp"
                android:layout_marginTop="8dp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_input_dateAfter"
                    android:hint="@string/tv_hint_date"
                    android:fontFamily="sans-serif"
                    android:textSize="16sp"
                    android:textColor="@color/colorTextSecondary"
                    android:gravity="center"
                    android:layout_weight="1" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/tv_input_timeAfter"
                    android:hint="@string/tv_hint_time"
                    android:fontFamily="sans-serif"
                    android:textSize="16sp"
                    android:textColor="@color/colorTextSecondary"
                    android:gravity="center"
                    android:layout_weight="1" />
            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_send"
                android:id="@+id/btn_send"
                android:layout_gravity="center"/>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
